Fixed padding and spacing and all that

--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,8 @@ footer {
 }
 
 header .content-wrapper {
-  margin: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -253,7 +254,8 @@ header nav ul li {
 
 footer .content-wrapper {
     width: 90%;
-    margin: 0;
+    margin: 0 auto;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -346,8 +348,18 @@ footer .copyright p {
 }
 
 #about .content-wrapper {
-  margin: 50px 0 50px 0;
-}
+    
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: row wrap;
+    width: 90%;
+  }
+
+
 
 #about h2 {
   margin: 0;
